<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout

        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/leftBracket"
                style="@style/customButton"
                android:text="@string/leftBracket"
                />


            <Button
                android:id="@+id/rightBracket"
                style="@style/customButton"
                android:text="@string/rightBracket" />

            <Button
                android:id="@+id/exponent"
                style="@style/customButton"
                android:text="@string/exponent" />

            <Button
                android:id="@+id/divide"
                style="@style/customButton"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/customButton"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight"
                style="@style/customButton"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                style="@style/customButton"
                android:text="@string/nine" />

            <Button
                android:id="@+id/multiply"
                style="@style/customButton"
                android:text="@string/multiply" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/customButton"
                android:text="@string/four" />

            <Button
                android:id="@+id/five"
                style="@style/customButton"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                style="@style/customButton"
                android:text="@string/six" />

            <Button
                android:id="@+id/add"
                style="@style/customButton"
                android:text="@string/add" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/customButton"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                style="@style/customButton"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                style="@style/customButton"
                android:text="@string/three" />

            <Button
                android:id="@+id/subtract"
                style="@style/customButton"
                android:text="@string/subtract" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zero"
                style="@style/customButton"
                android:text="@string/zero" />

            <Button
                android:id="@+id/point"
                style="@style/customButton"
                android:text="@string/point" />

            <Button
                android:id="@+id/equal"
                style="@style/customButton"
                android:layout_weight="2"
                android:backgroundTint="@color/green"
                android:text="@string/equal"
                android:onClick="calculate"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="false"
        android:labelFor="@null"
        android:text="My Calculator"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/display"
        style="@style/input"
        android:hint="@string/display"
        android:layout_marginBottom="152dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

    </EditText>

    <ImageButton
        android:id="@+id/button2"
        style="@style/backspace"

        android:contentDescription="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="delete"/>

    <TextView
        android:id="@+id/result"
        android:text=""
        style="@style/result"
        android:hint="result"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/clear"
        style="@style/customButton"
        android:layout_width="143dp"
        android:layout_height="75dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/orange"
        android:text="@string/clear"
        android:onClick="clear"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>